a1/brendan_gordon/TEST_PROGRAMS/invalidtype/dongkyu_kim/error5.min
# incompatible operation between two strings

var x: string;
var y: string;
var z: string;

z = x * y;

print z;

